added batting, pitching stats. Notes to main page and menu for future pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,25 @@
         <div class="col-md-12">
 
         <h2 style='width:100%; text-align:center' class='elexhdd' ><strong>Baseball 2018</strong></h2>
+        <br>
+            <hr class='fancy'>
+            <div class="row">
+                <div class="col-xs-3" style='text-align:center'>League</div>
+                <div class="col-xs-3" style='text-align:center'><a href=""><strong style='color:#FF9C00'>Sox</strong></a></div>
+                <div class="col-xs-3" style='text-align:center'><a href=""><strong style='color:#FF9C00'>Cubs</strong></a></div>
+                <div class="col-xs-3" style='text-align:center'><a href=""><strong style='color:#FF9C00'>H2H</strong></a></div>
+            </div>
+            <hr class='fancy'>
+        <br>
+
         <h3><small>I'm going to try and follow the baseball season using a python app. It's not much to look at right now, but I'll add to it gradually. The idea is to run a script once a day and update this website.<br>
             I'm starting with the <a href ="https://github.com/jldbc/pybaseball" target="_blank">pybaseball</a> package by James LeDoux and going from there. The goal is to learn more python and more about baseball statistics. All my work can be <a href="https://github.com/dailyherald/pybaseball" target="_blank">found here.</a></small></h3>
+            <p><strong>Updated Wednesday, April 4</strong><br>
+                I really ought to automate that date. While not reflected in the page below, I have updated things behind the scenes. First, in the github repository, all the code to this is in the freeze.py script as well as the playing jupyter notebook.<br>
+                Next, I've added batting and pitching stats for each team to the standings file. Pybaseball gets these from <a href="https://www.fangraphs.com" target="_blank">fangraphs.com.</a> I'm going to add some graphics below the standings, likely based on some work I've done with <a href="https://github.com/dailyherald/Seaborn" target="_blank"> Seaborn.</a> I'm thinking of running regressions on several things and watch how they change as the season progresses.<br>
+                I'll also set up a simple home run bar chart to track teams' progress. I believe it's projected a couple of teams may break the single-season record.<br>
+                After this page is done, I'll start figuring out what kind of analytics I want to do for the Cubs and Sox, as well as a head-to-head comparison page.
+            </p>
 
         <div class="row">
         <div class="col-md-6">
@@ -34,7 +51,7 @@
                             </thead><tbody>
                                 {% for team in div.list|sort(reverse=True, attribute='WLperc') %}
                                         <tr>
-                                            <td style="text-align:left">{{ team.Tm }}</td>
+                                            <td style="text-align:left">{{ team.Team }}</td>
                                             <td>{{ team.W }}</td>
                                             <td>{{ team.L }}</td>
                                             <td>{{ team.WLperc }}</td>
@@ -58,7 +75,7 @@
                                 {% for team in div.list|sort(reverse=True, attribute='WLperc') %}
                                     {% if team.Tm == 'Chicago White Sox' %}
                                         <tr>
-                                            <td style="text-align:left"><a href=""><strong style='color:#FF9C00'>{{ team.Tm }}</a></strong></td>
+                                            <td style="text-align:left"><a href=""><strong style='color:#FF9C00'>{{ team.Team }}</a></strong></td>
                                             <td>{{ team.W }}</td>
                                             <td>{{ team.L }}</td>
                                             <td>{{ team.WLperc }}</td>
@@ -66,7 +83,7 @@
                                         </tr>
                                     {% else %}
                                         <tr>
-                                            <td style="text-align:left">{{ team.Tm }}</td>
+                                            <td style="text-align:left">{{ team.Team }}</td>
                                             <td>{{ team.W }}</td>
                                             <td>{{ team.L }}</td>
                                             <td>{{ team.WLperc }}</td>
@@ -90,7 +107,7 @@
                             </thead><tbody>
                                 {% for team in div.list|sort(reverse=True, attribute='WLperc') %}
                                         <tr>
-                                            <td style="text-align:left">{{ team.Tm }}</td>
+                                            <td style="text-align:left">{{ team.Team }}</td>
                                             <td>{{ team.W }}</td>
                                             <td>{{ team.L }}</td>
                                             <td>{{ team.WLperc }}</td>
@@ -126,7 +143,7 @@
                             </thead><tbody>
                                 {% for team in div.list|sort(reverse=True, attribute='WLperc') %}
                                         <tr>
-                                            <td style="text-align:left">{{ team.Tm }}</td>
+                                            <td style="text-align:left">{{ team.Team }}</td>
                                             <td>{{ team.W }}</td>
                                             <td>{{ team.L }}</td>
                                             <td>{{ team.WLperc }}</td>
@@ -150,7 +167,7 @@
                                 {% for team in div.list|sort(reverse=True, attribute='WLperc') %}
                                     {% if team.Tm == 'Chicago Cubs' %}
                                         <tr>
-                                            <td style="text-align:left"><a href=""><strong style='color:#FF9C00'>{{ team.Tm }}</a></strong></td>
+                                            <td style="text-align:left"><a href=""><strong style='color:#FF9C00'>{{ team.Team }}</a></strong></td>
                                             <td>{{ team.W }}</td>
                                             <td>{{ team.L }}</td>
                                             <td>{{ team.WLperc }}</td>
@@ -158,7 +175,7 @@
                                         </tr>
                                     {% else %}
                                         <tr>
-                                            <td style="text-align:left">{{ team.Tm }}</td>
+                                            <td style="text-align:left">{{ team.Team }}</td>
                                             <td>{{ team.W }}</td>
                                             <td>{{ team.L }}</td>
                                             <td>{{ team.WLperc }}</td>
@@ -182,7 +199,7 @@
                             </thead><tbody>
                                 {% for team in div.list|sort(reverse=True, attribute='WLperc') %}
                                         <tr>
-                                            <td style="text-align:left">{{ team.Tm }}</td>
+                                            <td style="text-align:left">{{ team.Team }}</td>
                                             <td>{{ team.W }}</td>
                                             <td>{{ team.L }}</td>
                                             <td>{{ team.WLperc }}</td>
