--- a/templates/index.html
+++ b/templates/index.html
@@ -22,11 +22,11 @@
         <h3><small>I'm going to follow the baseball season using a python app. The idea is to run a script once a day, update a bunch of csv files and charts and use them to build this python/flask-based website. Then I'll back it up to github where it'll be viewable.<br>
             I'm starting with the <a href ="https://github.com/jldbc/pybaseball" target="_blank">pybaseball</a> package by James LeDoux and going from there. The goal is to learn more python and baseball statistics as I gradually add features and content. All my work so far can be <a href="https://github.com/dailyherald/pybaseball" target="_blank">found here.</a></small></h3>
             <br>
-            <p><strong>Updated Thursday, April 5</strong><br>
-                I really ought to automate that date. I've added a number of charts to the Visualizations section, located below the standings. I think I need a better name for that section. I intend to save a copy of the charts at the end of each month and maybe create an animated gif to see how things changed as the season progressed.<br> 
+            <p><strong>Updated {{timestamp}}</strong><br>
+                Cool little timestamp function courtesy of <a href="https://www.palmbeachpost.com/online/contacts/mike-stucka/FjphMq55qdlRspL3H7GKoM/" target="_blank">Mike Stucka</a> of the Palm Beach Post. Thanks Mike! I've added a number of charts to the Visualizations section, located below the standings. I intend to save a copy of the charts at the end of each month and create an animated gif to see how things changed as the season progressed.<br> 
                 After this page is done, I'll start figuring out what kind of analytics I want to do for the Cubs and Sox individually, as well as a head-to-head comparison page.
             </p>
-        <br>
+            <br>
         <hr class='fancy'>
         <br>
         <h2 style='width:100%; text-align:center'><strong>Standings</strong></h2>
@@ -34,14 +34,11 @@
         <p>Pybaseballs gathers these from <a href="https://www.baseball-reference.com/" target="_blank">Baseball-reference.com.</a> Standings are not always updated by the time this page is, and may be slightly out of date.</p>
         <div class="row">
         <div class="col-md-6">
-
-            <br>
             <!--Begin schedule-->
             <!--Select for League-->
              {% for group in object_list|groupby('League') %}
                 {% if group.grouper == "American" %}
                     <hr>
-                    <br>
                     <h2 style='width:100%; text-align:center'>{{ group.grouper }} League</h2>
 
                     <!-- East division -->
@@ -127,13 +124,11 @@
         </div>
 
         <div class="col-md-6">
-            <br>
             <!--Begin schedule-->
             <!--Select for League-->
              {% for group in object_list|groupby('League') %}
                 {% if group.grouper == "National" %}
                     <hr>
-                    <br>
                     <h2 style='width:100%; text-align:center'>{{ group.grouper }} League</h2>
                     
                     <!-- East division -->
