--- a/templates/index.html
+++ b/templates/index.html
@@ -293,7 +293,7 @@
                 <br>
             </div>
             <div class="col-md-8">
-                <img src="{{ url_for('static', filename='img/hr.png') }}" class="img-responsive center-block"><br>
+                <img src="{{ url_for('static', filename='img/HR.png') }}" class="img-responsive center-block"><br>
             </div>
         </div>
 
