--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
         <div class="col-md-12">
 
         <h2 style='width:100%; text-align:center' class='elexhdd' ><strong>Baseball 2018</strong></h2>
+        <p><i>A little-more-than-casual but not-very-wonky statistical look at the current season</i><p>
         <br>
             <hr class='fancy'>
             <div class="row">
@@ -19,7 +20,7 @@
             <hr class='fancy'>
         <br>
 
-        <h3><small>I'm going to follow the baseball season using a python app. The idea is to run a script once a day, update a bunch of csv files and charts and use them to build this python/flask-based website. Then I'll back it up to github where it'll be viewable.<br>
+        <h3><small>I'm following the baseball season using a python app. The idea is to run a script once a day, update a bunch of csv files and charts and use them to build this python/flask-based website. Then I'll back it up to github where it'll be viewable.<br>
             I'm starting with the <a href ="https://github.com/jldbc/pybaseball" target="_blank">pybaseball</a> package by James LeDoux and going from there. The goal is to learn more python and baseball statistics as I gradually add features and content. All my work so far can be <a href="https://github.com/dailyherald/pybaseball" target="_blank">found here.</a></small></h3>
             <br>
             <p><strong>Updated {{timestamp}}</strong><br>
@@ -221,8 +222,7 @@
         <br>
         <h2 style='width:100%; text-align:center'><strong>Visualizations</strong></h2>
         <br>
-        <p>Here's where I'm going to take a look at various measures visually and see how the Chicago teams fall among the major leagues.</p>
-        <p>Pybaseball gets these from <a href="https://www.fangraphs.com" target="_blank">fangraphs.com.</a> I'm using <a href="https://github.com/dailyherald/Seaborn" target="_blank"> Seaborn,</a>  a Python visualization library, to create the charts. Seaborn is inspired by ggplot2 in R.</p>
+        <p>Pybaseball gets these statistics from <a href="https://www.fangraphs.com" target="_blank">fangraphs.com.</a> I'm using <a href="https://github.com/dailyherald/Seaborn" target="_blank"> Seaborn,</a>  a Python visualization library, to create the charts. Seaborn is inspired by ggplot2 in R.</p>
         <p>As far as how I decide what and how I chart, I'm using the highly sophisticated method of "Well that sounds important, I wonder what it would look like if I chart it with this other thing that sounds important." A high bar indeed.</p>
         <hr>
         <div class="row">
@@ -288,7 +288,7 @@
                 <h4><strong>Team home runs</strong>
                     <br><small>Black = White Sox, Blue = Cubs.</small></h4>
                     <br>
-                <p>Reports suggest the single-season team home run record may be broken this year. This chart will track total home runs hit by teams this year.</p>
+                <p>Reports suggest the single-season team home run record may be broken this year so let's track that.</p>
                 <p>The vertical red line indicates the current record of 264 by the 1997 Seattle Mariners.</p>
                 <br>
             </div>
