--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             </div>
             <hr class='fancy'>
             <br>
-        <h3><small>I'm following the baseball season using this python/flask app I'm writing. I'm starting with the <a href ="https://github.com/jldbc/pybaseball" target="_blank">pybaseball</a> package by James LeDoux and going from there. The goal is to learn more python and baseball statistics as I gradually add features and content. All my code so far can be <a href="https://github.com/dailyherald/pybaseball" target="_blank">found here.</a> At some point, I'll set this up to update automatically each day.</small></h3>
+        <h3><small>I'm following the baseball season by developing this app, written in python/flask and utilizing the <a href ="https://github.com/jldbc/pybaseball" target="_blank">pybaseball</a> package by James LeDoux. The goal is to learn more python and baseball statistics as I gradually add features and content. All my code so far can be <a href="https://github.com/dailyherald/pybaseball" target="_blank">found here.</a> At some point, I'll set this up to update automatically each day.</small></h3>
             <br>
             <p><strong>Updated {{timestamp}}</strong><br>
                 Cool little timestamp function courtesy of <a href="https://www.palmbeachpost.com/online/contacts/mike-stucka/FjphMq55qdlRspL3H7GKoM/" target="_blank">Mike Stucka</a> of the Palm Beach Post. Thanks Mike!<br>
