updated notes, some small layout tweaks

--- a/templates/sox.html
+++ b/templates/sox.html
@@ -12,7 +12,7 @@
        <p style='width:100%; text-align:center'><i>A little-more-than-casual but not-very-wonky statistical look at the current season</i></p>
             <hr class='fancy'>
             <div class="row">
-                <div class="col-xs-3" style='text-align:center'><a href="index.html"><strong style='color:#FF9C00'>League</strong></div>
+                <div class="col-xs-3" style='text-align:center'><a href="index.html"><strong style='color:#FF9C00'>League</strong></a></div>
                 <div class="col-xs-3" style='text-align:center'>Sox</div>
                 <div class="col-xs-3" style='text-align:center'><a href="cubs.html"><strong style='color:#FF9C00'>Cubs</strong></a></div>
                 <div class="col-xs-3" style='text-align:center'><a href="h2h.html"><strong style='color:#FF9C00'>H2H</strong></a></div>
