--- a/templates/cubs.html
+++ b/templates/cubs.html
@@ -19,15 +19,31 @@
             </div>
             <hr class='fancy'>
             <br>
-            <p><strong>Updated {{timestamp}}</strong><br>
-                Statistical look at games, batters and pitchers useful for the more casual fan at the ballpark.
-            </p>
+            <p style='width:100%; text-align:center' ><strong>Updated {{timestamp}}</strong></p>
             <br>
         <hr class='fancy'>
         <br>
         <h2 style='width:100%; text-align:center' id="games"><strong>Games</strong></h2>
         <p style='width:100%; text-align:center' ><small>JUMP TO <a href="#top"><strong style='color:#FF9C00'>TOP</strong></a> | <a href="#batters"><strong style='color:#FF9C00'>BATTERS</strong></a> | <a href="#PITCHERS"><strong style='color:#FF9C00'>PITCHERS</strong></a></small><p>
-        <p>Games will have results of the last game played and game results summarized by team. By summariezed I mean that, instead of each game played, I'm going to have summarized stats of how the Cubs have done against each team all season.</p>
+        <p><strong>On {{ nl[0].Date }},</strong> the Cubs {% if nl[0].WL == 'W' %}won{% else %}lost{% endif %} a {% if nl[0].DN == 'D' %}day{% else %}night{% endif %} {% if nl[0].Home_Away == '@' %}away{% else %}home{% endif %} game against the {{ nl[0].Team }}, {{ nl[0].R }} to {{ nl[0].RA }}, in {{ nl[0].Inn }} innings. <strong>Next scheduled game:</strong> {{ nl[1].Date }}, a {% if nl[1].DN == 'D' %}day{% else %}night{% endif %} {% if nl[1].Home_Away == '@' %}away{% else %}home{% endif %} game with the {{ nl[1].Team }}.</p>
+        <br>
+        <h3 style='width:100%; text-align:center'>Summary results by team</h3>
+        <br>
+        <table class='table table-condensed elex'>
+            <thead>
+            <th style="text-align:left">Team</th><th>Wins</th><th>Loses</th><th>Avg. Cubs runs</th><th>Avg. runs against</th>
+        </thead><tbody>
+            {% for team in agg %}
+                    <tr>
+                        <td style="text-align:left">{{ team.Team }}</td>
+                        <td>{{ team.Wins }}</td>
+                        <td>{{ team.Loses }}</td>
+                        <td>{{ team.AvgRuns }}</td>
+                        <td>{{ team.AvgRunsAg }}</td>
+                    </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
             <br>
         <hr class='fancy'>
