small tweaks, including adding -wo, or walk offs, to win/loss count

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,6 +3,7 @@
   <div class="row">
     <div class="col-md-10 center-block center-blockfloat">
       <p><small>Web app by Tim Broderick <a href="mailto:tbroderick@dailyherald.com">tbroderick@dailyherald.com</a>.<br> 
+      	Cool little timestamp function courtesy of <a href="https://www.palmbeachpost.com/online/contacts/mike-stucka/FjphMq55qdlRspL3H7GKoM/" target="_blank">Mike Stucka</a> of the Palm Beach Post. Thanks Mike!
       </small></p>
     </div>
   </div>
