--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         <hr class='fancy'>
         <br>
         <h2 style='width:100%; text-align:center' id="standings"><strong>Standings</strong></h2>
-        <p style='width:100%; text-align:center' ><small>JUMP TO <a href="#top"><strong style='color:#FF9C00'>TOP</strong></a> | <a href="#visualizations"><strong style='color:#FF9C00'>VISUALIZATIONS</strong></a></small><p>
+        <p style='width:100%; text-align:center' ><small>JUMP TO <a href="#top"><strong style='color:#FF9C00'>TOP</strong></a> | <a href="#visualizations"><strong style='color:#FF9C00'>VISUALIZATIONS</strong></a></small></p>
         <p>Pybaseballs gathers these from <a href="https://www.baseball-reference.com/" target="_blank">Baseball-reference.com.</a> Standings are not always updated by the time this page is, and may be slightly out of date.</p>
         <div class="row">
         <div class="col-md-6">
@@ -217,7 +217,7 @@
         <hr class='fancy'>
         <br>
         <h2 style='width:100%; text-align:center' id="visualizations"><strong>Visualizations</strong></h2>
-        <p style='width:100%; text-align:center' ><small>JUMP TO  <a href="#top"><strong style='color:#FF9C00'>TOP</strong></a> | <a href="#standings"><strong style='color:#FF9C00'>STANDINGS</strong></a></small><p>
+        <p style='width:100%; text-align:center' ><small>JUMP TO  <a href="#top"><strong style='color:#FF9C00'>TOP</strong></a> | <a href="#standings"><strong style='color:#FF9C00'>STANDINGS</strong></a></small></p>
         <p>Pybaseball gets these statistics from <a href="https://www.fangraphs.com" target="_blank">fangraphs.com.</a> I'm using <a href="https://github.com/dailyherald/Seaborn" target="_blank"> Seaborn,</a>  a Python visualization library, to create the charts. Seaborn is inspired by ggplot2 in R.</p>
         <p>As far as how I decide what and how I chart, I'm using the highly sophisticated method of "Well that sounds important, I wonder what it would look like if I chart it with this other thing that sounds important." A high bar indeed.</p>
         <hr>
