added roster info

--- a/templates/cubs.html
+++ b/templates/cubs.html
@@ -61,7 +61,7 @@
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="{{ name.last }}{{ name.R }}{{ name.H }}">
               <h4 class="panel-title">
-                <strong>{{ name.Name }}</strong>
+                <strong>{{ name.Name }}</strong> <small>#{{ name.posnum }}, {{ name.position }}</small>
               </h4>
               <p>Batting average: {{ name.AVG }} | <a class="collapsed" role="button" data-toggle="collapse" data-parent="#hitaccordion" href="#collapse{{ name.last }}{{ name.R }}{{ name.H }}" aria-expanded="false" aria-controls="collapse{{ name.last }}{{ name.R }}{{ name.H }}"><small>CLICK HERE FOR MORE</small></a></p>
 
