--- a/templates/cubs.html
+++ b/templates/cubs.html
@@ -54,6 +54,7 @@
         <br>
         <h2 style='width:100%; text-align:center' id="batters"><strong>Batters</strong></h2>
         <p style='width:100%; text-align:center' ><small>JUMP TO <a href="#top"><strong style='color:#FF9C00'>TOP</strong></a> | <a href="#games"><strong style='color:#FF9C00'>GAMES</strong></a> | <a href="#pitchers"><strong style='color:#FF9C00'>PITCHERS</strong></a></small><p>
+        <p>Click the link under a player's name to see detailed batting statistics</p>
 
         <div class="panel-group" id="hitaccordion" role="tablist" aria-multiselectable="true">
 
