--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,11 @@
             </div>
             <hr class='fancy'>
             <br>
-        <h3><small>I'm following the baseball season by developing this app, written in python/flask and utilizing the <a href ="https://github.com/jldbc/pybaseball" target="_blank">pybaseball</a> package by James LeDoux. The goal is to learn more python and baseball statistics as I gradually add features and content. All my code so far can be <a href="https://github.com/dailyherald/pybaseball" target="_blank">found here.</a> At some point, I'll set this up to update automatically each day.</small></h3>
+        <h3><small>Best viewed on a mobile device on a warm evening, sitting in a cheap upper-deck seat with family, friends, a ballpark hot dog and your favorite cold beverage.</small></h3>
             <br>
             <p><strong>Updated {{timestamp}}</strong><br>
-                The additional pages have been set up and game summaries created. For the head 2 head page, there's some ready-made plots in the pybaseball package that would allow me to compare a few things, but mostly I'm thinking of violin plots to compare the team players. 
+                The additional pages have been set up, game summaries and batting stats/charts created. I need to think about how to to report on double-headers.<br>
+                 For the head 2 head page, there's some ready-made plots in the pybaseball package that would allow me to compare a few things, but mostly I'm thinking of violin plots to compare the team players. 
             </p>
             <br>
         <hr class='fancy'>
