--- a/templates/sox.html
+++ b/templates/sox.html
@@ -54,6 +54,7 @@
         <br>
         <h2 style='width:100%; text-align:center' id="batters"><strong>Batters</strong></h2>
         <p style='width:100%; text-align:center' ><small>JUMP TO <a href="#top"><strong style='color:#FF9C00'>TOP</strong></a> | <a href="#games"><strong style='color:#FF9C00'>GAMES</strong></a> | <a href="#pitchers"><strong style='color:#FF9C00'>PITCHERS</strong></a></small></p>
+        <p>Click the link under a player's name to see detailed batting statistics</p>
 
         <div class="panel-group" id="hitaccordion" role="tablist" aria-multiselectable="true">
 
@@ -63,7 +64,7 @@
               <h4 class="panel-title">
                 <strong>{{ name.Name }}</strong> <small>#{{ name.posnum }}, {{ name.position }}</small>
               </h4>
-              <p>Batting average: {{ name.AVG }} | <a class="collapsed" role="button" data-toggle="collapse" data-parent="#hitaccordion" href="#collapse{{ name.lastname }}{{ name.R }}{{ name.H }}" aria-expanded="false" aria-controls="collapse{{ name.lastname }}{{ name.R }}{{ name.H }}"><small>CLICK HERE FOR MORE</small></a></p>
+              <p><a class="collapsed" role="button" data-toggle="collapse" data-parent="#hitaccordion" href="#collapse{{ name.lastname }}{{ name.R }}{{ name.H }}" aria-expanded="false" aria-controls="collapse{{ name.lastname }}{{ name.R }}{{ name.H }}"><small>CLICK HERE FOR MORE</small></a></p>
 
             </div>
             <div id="collapse{{ name.lastname }}{{ name.R }}{{ name.H }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ name.lastname }}{{ name.R }}{{ name.H }}">
@@ -71,12 +72,13 @@
                 <table class='table table table-condensed table-striped'>
                     <tbody>
                         <tr><td class='tdLEFT'>At bats</td><td>{{ name.AB }}</td></tr>
-                        <tr><td class='tdLEFT'>Hits</td><td>{{ name.H }}</td></tr>
+                        <tr><td class='tdLEFT'>Batting Avg.</td><td>{{ name.AVG }}</td></tr>
                     </tbody>
                 </table>
                 <img src="static/img/sox{{ name.lastname|string }}{{ name.posnum|string }}.png" class="img-responsive center-block"><br>
                  <table class='table table table-condensed table-striped'>
                     <tbody>
+                        <tr><td class='tdLEFT'>Hits</td><td>{{ name.H }}</td></tr>
                         <tr><td class='tdLEFT'>Runs</td><td>{{ name.R }}</td></tr>
                         <tr><td class='tdLEFT'>RBI</td><td>{{ name.RBI }}</td></tr>
                         <tr><td class='tdLEFT'>Home runs</td><td>{{ name.HR }}</td></tr>
