new notes, text

--- a/templates/cubs.html
+++ b/templates/cubs.html
@@ -64,7 +64,7 @@
               <h4 class="panel-title">
                 <strong>{{ name.Name }}</strong> <small>#{{ name.posnum }}, {{ name.position }}</small>
               </h4>
-              <p>Batting average: {{ name.AVG }} | <a class="collapsed" role="button" data-toggle="collapse" data-parent="#hitaccordion" href="#collapse{{ name.lastname }}{{ name.R }}{{ name.H }}" aria-expanded="false" aria-controls="collapse{{ name.lastname }}{{ name.R }}{{ name.H }}"><small>CLICK HERE FOR MORE</small></a></p>
+              <p><a class="collapsed" role="button" data-toggle="collapse" data-parent="#hitaccordion" href="#collapse{{ name.lastname }}{{ name.R }}{{ name.H }}" aria-expanded="false" aria-controls="collapse{{ name.lastname }}{{ name.R }}{{ name.H }}"><small>CLICK HERE FOR MORE</small></a></p>
 
             </div>
             <div id="collapse{{ name.lastname }}{{ name.R }}{{ name.H }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ name.lastname }}{{ name.R }}{{ name.H }}">
@@ -72,12 +72,13 @@
                  <table class='table table table-condensed table-striped'>
                     <tbody>
                         <tr><td class='tdLEFT'>At bats</td><td>{{ name.AB }}</td></tr>
-                        <tr><td class='tdLEFT'>Hits</td><td>{{ name.H }}</td></tr>
+                        <tr><td class='tdLEFT'>Batting Avg.</td><td>{{ name.AVG }}</td></tr>
                     </tbody>
                 </table>
                 <img src="static/img/cubs{{ name.lastname|string }}{{ name.posnum|string }}.png" class="img-responsive center-block"><br>
                  <table class='table table table-condensed table-striped'>
                     <tbody>
+                        <tr><td class='tdLEFT'>Hits</td><td>{{ name.H }}</td></tr>
                         <tr><td class='tdLEFT'>Runs</td><td>{{ name.R }}</td></tr>
                         <tr><td class='tdLEFT'>RBI</td><td>{{ name.RBI }}</td></tr>
                         <tr><td class='tdLEFT'>Home runs</td><td>{{ name.HR }}</td></tr>
